--- a/src/dynamic/index.pug
+++ b/src/dynamic/index.pug
@@ -4,7 +4,7 @@ body(onload="load()")
     include includes/nav.pug
     #content
         span.header
-            h1 Discord Bot List
+            h1 Night-wolf list
             p Just another bot list for Discord.
         #searchMore
             | Would you like to 
