--- a/src/dynamic/index.pug
+++ b/src/dynamic/index.pug
@@ -4,8 +4,8 @@ body(onload="load()")
     include includes/nav.pug
     #content
         span.header
-            h1 Night-wolf list
-            p Just another bot list for Discord.
+            h1 Night-wolf
+            p an advance discord bot list
         #searchMore
             | Would you like to 
             a(href='/bots/search/') search all bots
