--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -1,7 +1,7 @@
 head
-    meta(property='og:title' content='Discord Bots')
+    meta(property='og:title' content='Night-wolf list')
     meta(property='og:type' content='website')
-    meta(property='og:description' content='Just another bot list for discord...')
+    meta(property='og:description' content='an advance bot list')
     meta(name='description' content='Just another bot list for discord...')
     meta(name='og:image' content='/assets/img/logo.png')
     meta(name='theme-color' content='#d2efe6')
@@ -35,4 +35,5 @@ head
     link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
 
     
-    title Discord Bots
+    title Night-wolf 
+
