--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -7,7 +7,7 @@ head
     meta(name='theme-color' content='#d2efe6')
     meta(content='width=device-width, initial-scale=1.0' name='viewport')
 
-    link(rel='shortcut icon' type='image/png' href='/assets/img/logo.png')
+    link(rel='shortcut icon' type='image/png' href='/assets/img/logo.png.jpg.')
     link(href='/assets/css/main.css' rel='stylesheet')
     link(href='/theme' rel='stylesheet')
 
